<resources>
    <string name="app_name">ui</string>
    <string name="title_activity_basic_mini_statement">Mini Statement</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date">Date</string>
    <string name="customer_id">Customer ID</string>
    <string name="previous">Previous</string>
    <string name="reference">Reference</string>
    <string name="id">ID</string>
    <string name="virtualAccount">Virtual Account</string>
    <string name="refresh">Refresh</string>
    <string name="phoneNo">Phone Number</string>
    <string name="customer_name">Customer Name</string>
    <string name="customer_phone_number">Customer Phone Number</string>
    <string name="product">Product</string>
    <string name="title_activity_update">UpdateActivity</string>
    <string name="middle_name_hint">Enter middle name (optional)…</string>
    <string name="title">Title</string>
    <string name="processing">Processing</string>
    <string name="search">Search</string>
    <string name="loading_banks">Loading Banks</string>
    <string name="textfield_hint">Compose Message</string>
    <string name="emojis_label">Emojis</string>
    <!-- Accessibility descriptions -->

    <string name="emoji_selector_desc">Emoji selector</string>
    <string name="emoji_selector_bt_desc">Show Emoji selector</string>
    <string name="dm_desc">Direct Message</string>
    <string name="attach_photo_desc">Attach Photo</string>
    <string name="map_selector_desc">Location selector</string>
    <string name="videochat_desc">Start videochat</string>
    <string name="textfield_desc">Text input</string>
    <string name="not_available">Functionality currently not available</string>
    <string name="not_available_subtitle">Grab a beverage and check back later!</string>
    <string name="back">Navigate up</string>
    <string name="attached_image">Attached image</string>
    <string name="info">Information</string>
    <string name="more_options">More options</string>
    <string name="send">Send</string>
    <string name="jumpBottom">Jump to bottom</string>
    <string name="author_me">me</string>
    <string name="receipt">Receipt</string>
</resources>
