<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:orientation="vertical"
        android:background="#fff">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customer_name"
            android:textSize="@dimen/small_sized_text"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/customer_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/customer_name"
            android:gravity="center"
            android:textSize="@dimen/medium_sized_text"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/customer_phone_number"
            android:textSize="@dimen/small_sized_text"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/customer_phone_no_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phoneNo"
            android:gravity="center"
            android:textSize="@dimen/medium_sized_text"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="@dimen/small_sized_text"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="@dimen/small_sized_text"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/product_name_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/product"
                android:textSize="@dimen/medium_sized_text"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/from_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/from"
                android:textSize="@dimen/medium_sized_text"
                android:textStyle="bold"
                android:layout_weight="1" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="@dimen/small_sized_text"
                android:layout_weight="1" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/small_sized_text"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/amount_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textSize="@dimen/medium_sized_text"
                android:textStyle="bold"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="@dimen/medium_sized_text"
                android:layout_weight="1" />

        </LinearLayout>

        <View
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#dedede" />

    </LinearLayout>
</layout>